kubernetes/api-completa.yaml
---

apiVersion: v1
kind: Pod
metadata:
  name: pod-clientes
  labels:
    app: pod-clientes
spec:
  containers:
  - name: pod-clientes
    image: brunocercan/api-clientes:dbk8conf
    ports:
      - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: svc-clientes
spec:
  ports:
    - name: porta-clientes
      protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: pod-clientes

---

apiVersion: v1
kind: Pod
metadata:
  name: pod-enderecos
  labels:
    app: pod-enderecos
spec:
  containers:
  - name: pod-enderecos
    image: brunocercan/api-enderecos:dbk8conf
    ports:
      - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: svc-enderecos
spec:
  ports:
    - name: porta-enderecos
      protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: pod-enderecos

---

apiVersion: v1
kind: Pod
metadata:
  name: pod-produtos
  labels:
    app: pod-produtos
spec:
  containers:
  - name: pod-produtos
    image: brunocercan/api-produtos:dbk8conf
    ports:
      - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: svc-produtos
spec:
  ports:
    - name: porta-produtos
      protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: pod-produtos

---

apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: brunocercan/mysql
    ports:
      - containerPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: node-port-mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      nodePort: 32000
  selector:
    app: mysql

---

apiVersion: v1
kind: Service
metadata:
  name: svc-pod-mysql
spec:
  ports:
  - name: porta-db
    protocol: "TCP"
    port: 3306
    targetPort: 3306
  selector: 
    app: mysql

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: brunocercan/nginx:confk8
    resources:
      limits:
        memory: "64Mi"
        cpu: "150m"
    ports:
      - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: node-port-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    name: nginx

---

apiVersion: v1
kind: Service
metadata:
  name: lb-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    name: nginx
